Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.1
-
None
Description
QUERY:
SELECT
LAG(CAST('2005-10-11 00:00:00' AS TIMESTAMP) + INTERVAL LEAST(-697, -718) YEAR, 88) OVER (ORDER BY month DESC, (year) - (id)) AS timestamp_col,
month,
(year) - (id) AS int_col,
GREATEST(COALESCE(id, 874), COALESCE(tinyint_col, 282)) AS int_col_2
FROM alltypes
STACK:
#0 0x0000003a0ca32635 in raise () from /lib64/libc.so.6 #0 0x0000003a0ca32635 in raise () from /lib64/libc.so.6 #1 0x0000003a0ca33d9d in abort () from /lib64/libc.so.6 #2 0x000000360c8bea5d in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib64/libstdc++.so.6 #3 0x000000360c8bcbe6 in ?? () from /usr/lib64/libstdc++.so.6 #4 0x000000360c8bcc13 in std::terminate() () from /usr/lib64/libstdc++.so.6 #5 0x000000360c8bcd0e in __cxa_throw () from /usr/lib64/libstdc++.so.6 #6 0x00007f9903313ab5 in ?? () #7 0x00007f98906c0db0 in ?? () #8 0x00007f98906c0db8 in ?? () #9 0x00000013906c0c90 in ?? () #10 0x000000000a6efb48 in ?? () #11 0x00000000057423b8 in ?? () #12 0x00007f98906c0db8 in ?? () #13 0x00007f98906c0cb0 in ?? () #14 0x0000000000e77bb0 in boost::equality_comparable<boost::gregorian::date, boost::gregorian::date, boost::detail::empty_base<boost::gregorian::date>, boost::detail::false_t>::equality_comparable (this=0xffffffff) at /usr/include/boost/operators.hpp:832 #15 0x00007f990330f71a in ?? () #16 0x00257097906c0f00 in ?? () #17 0x000000000b143350 in ?? () #18 0x00000000087a1ba0 in ?? () #19 0x00000000057423c0 in ?? () #20 0x00000000087a1b90 in ?? () #21 0x00007f98906c1040 in ?? () #22 0x00007f98906c0ea0 in ?? () #23 0x00000000087a1ba0 in ?? () #24 0x00007f98906c0eb0 in ?? () #25 0x0000000001ebe7e3 in std::__uninitialized_copy<true>::uninitialized_copy<__gnu_cxx::__normal_iterator<impala_udf::AnyVal* const*, std::vector<impala_udf::AnyVal*, std::allocator<impala_udf::AnyVal*> > >, impala_udf::AnyVal**> (__first=Cannot access memory at address 0x0 ) at /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/stl_uninitialized.h:92 Backtrace stopped: previous frame inner to this frame (corrupt stack?)