IMPALA-1493: catch boost exception in TimestampFunctions::DateAddSub

I looked at the timestamp functions, cast functions, and
TimestampValue, and this is the only place I found where we were
missing a try/catch for creating a new boost::gregorian::date object.

Change-Id: I97a0e7197167b24074226009b661247991fda12c
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5354
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins